Fix for control elements size on text editor on Iphone5. Gitlab #256

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -5506,7 +5506,8 @@ a.small-icon, button.small-icon {
 			}
 			
 			.control {
-				width: 24px; height: 100%;
+				padding: 0 5px;
+				width: 32px; height: 100%;
 				line-height: 20px;
 				cursor: pointer;
 				background: transparent;
